--- a/src/templates/security/login_user.html
+++ b/src/templates/security/login_user.html
@@ -15,6 +15,7 @@
                 {{ render_field(login_user_form.next) }}
                 {{ render_field(login_user_form.submit, class="btn btn-primary") }}
             </form>
+            <!--TODO: rewrite sentence-->
             <p>Not yet signed up? Please contact to admin to register for an account</a>.</p>
         </div>
     </div>
