--- a/src/templates/admin/index.html
+++ b/src/templates/admin/index.html
@@ -8,6 +8,7 @@
             <p class="lead">
                 Admin start page
             </p>
+            <!--TODO: add instruction + annotations-->
             <p>
                 <a class="btn btn-primary" href="{{ url_for('security.logout') }}">logout</a>
             </p>
