--- a/src/templates/security/login_user.html
+++ b/src/templates/security/login_user.html
@@ -20,3 +20,8 @@
     </div>
 </div>
 {% endblock body %}
+
+{% block tail_js %}
+    {{ super() }}
+    <script> $(".navbar-default").css('visibility', 'hidden');</script>
+{% endblock tail_js %}
