move search field to right

--- a/src/templates/admin/lists/default_list.html
+++ b/src/templates/admin/lists/default_list.html
@@ -50,7 +50,7 @@
         {% endif %}
 
         {% if search_supported %}
-        <li>
+        <li style="float: right !important;">
             {{ model_layout.search_form() }}
         </li>
         {% endif %}
