--- a/application/templates/my_master.html
+++ b/application/templates/my_master.html
@@ -15,4 +15,11 @@
     </ul>
 </div>
 {% endif %}
+{% block tail_js %}
+    {{ super() }}
+    <script>
+    $(".navbar-brand").remove()
+    </script>
+    {% endblock %}
+
 {% endblock %}
