--- a/application/templates/admin/client_index.html
+++ b/application/templates/admin/client_index.html
@@ -8,7 +8,7 @@
         <textarea class="form-control" id="searchTextArea" rows="3"></textarea>
     </div>
 {#        <right>#}
-  <button id="search" type="submit" class="btn btn-info">Submit Information</button>
+  <button id="search" type="submit" class="btn btn-primary">Отправить поисковые запросы</button>
 {#            </right>#}
 {#</form>#}
 
